--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script type="module" async defer>
+    <script type="module" async>
       import '/@easedotjs/core/index.js';
       import '/@easedotjs/components/index.js';
       import '/@easedotjs/reactive-dom/index.js';
@@ -18,14 +18,14 @@
   </head>
   <body>
     <ns-header></ns-header>
-    <ns-hero>
+    <div id="hero">
       <p>No build step or bundler needed.</p>
       <p>Pure HTML and JavaScript.</p>
       <p><strong>Code. Upload. Done.</strong></p>
       <p>That's <strong><em>Ease</em></strong>.</p>
       <ns-button to="docs.html">Get Started</ns-button>
       <ns-button to="docs.html">Documentation</ns-button>    
-    </ns-hero>
+    </div>
     <main>
       <ns-details color="var(--paper-1)">
         <p>
@@ -50,87 +50,94 @@
           With very little to learn, anyone familiar with HTML can get started with Ease.
         </p>
       </ns-details>
-      <ns-demo bgcolor="#f5f5f5">
+      <ns-details color="#f5f5f5">
         <h1>
           Load the Library
         </h1>
         <p>
           Start by adding the necessary script tags to your HTML file.
         </p>
-        <div slot="code">
-          &lt;script type="module" src="https://unpkg.com/@easedotjs/core"&gt;&lt;/script&gt;<br/>
-          &lt;script type="module" src="https://unpkg.com/@easedotjs/components"&gt;&lt;/script&gt;<br/>
-        </div>
-      </ns-demo>    
-      <ns-demo>
+        <code>
+          <span class="tagstart">script</span>
+          <span class="tagattr">type</span><span class="tagattrval">module</span> 
+          <span class="tagattr">src</span><span class="tagattrval">https://unpkg.com/@easedotjs/core</span><span class="tagend v-no-content">script</span>
+          <br/>
+          <span class="tagstart">script</span>
+          <span class="tagattr">type</span><span class="tagattrval">module</span> 
+          <span class="tagattr">src</span><span class="tagattrval">https://unpkg.com/@easedotjs/components</span><span class="tagend v-no-content">script</span>
+        </code>
+      </ns-details>    
+      <ns-details>
         <h1>
           Load a Component
         </h1>
         <p>
           Once you've loaded the library, you can load a component from an HTML document.
         </p>
-        <div slot="code">
-          &lt;link rel="component" name="ns-hello" href="components/hello.html" /&gt;<br/>
-        </div>
-      </ns-demo>
-      <ns-demo bgcolor="#f5f5f5">
+        <code>
+          <span class="tagstart">link</span>
+          <span class="tagattr">rel</span><span class="tagattrval">component</span>
+          <span class="tagattr">name</span><span class="tagattrval">ns-hello</span>
+          <span class="tagattr">href</span><span class="tagattrval">components/hello.html</span>
+          <span class="tagend v-self-closing"></span>
+        </code>
+      </ns-details>
+      <ns-details bgcolor="#f5f5f5">
         <h1>
           Use the Component
         </h1>
         <p>
           Once you've loaded the component, you can use it in your HTML.
         </p>
-        <div slot="code">
-          &lt;ns-hello&gt;Hello World!&lt;/ns-hello&gt;<br/>
-        </div>
-      </ns-demo>
+        <code>
+          <span class="tagstart v-no-attrs">ns-hello</span></span>Hello World!<span class="tagend">ns-hello</span>
+        </code>
+      </ns-details>
       <ns-details color="var(--paper-1)">
         <p>
           Components can be complex, interactive isolated elements with their own styles, 
           scripts, and templates - or simple, static elements that just render content.
         </p>
       </ns-details>
-      <ns-demo  bgcolor="#f5f5f5">
+      <ns-details  bgcolor="#f5f5f5">
         <h1>
           Keep things simple and light...
         </h1>
-        <div slot="filename">
-          hello.html
-        </div>
-        <div slot="code">
-          &lt;div&gt;&lt;slot&gt;&lt;/slot&gt;&lt;/div&gt;<br/>
-        </div>
-      </ns-demo>
-      <ns-demo>
+        <code>
+          <span class="tagstart v-no-attrs">template</span><br/>
+          <span class="tagstart v-no-attrs">slot</span><span class="tagend">slot</span><br/>
+          <span class="tagend">template</span>
+        </code>
+      </ns-details>
+      <ns-details>
         <h1>
           ...or build something more complex
         </h1>
         <div slot="filename">
           hello.html
         </div>
-        <div slot="code">        
-          &lt;template&gt;<br/>
-          &nbsp;&nbsp;&lt;h1&gt;Hello, &lt;slot&gt;&lt;/slot&gt;&lt;/h1&gt;<br/>
-          &lt;/template&gt;<br/>
+        <code>
+          <span class="tagstart v-no-attrs">template</span><br/>
+          <span class="text">Hello, </span><span class="tagstart v-no-attrs">slot</span><span class="tagend">slot</span><br/>
+          <span class="tagend">template</span><br/>
           <br/>
-          &lt;script&gt;<br/>
-          &nbsp;&nbsp;export default ({ root, el, attr }) => {<br/>
-          &nbsp;&nbsp;&nbsp;&nbsp;el.querySelector('h1').style.color = attr.color;<br/>
-          &nbsp;&nbsp;}<br/>
-          &lt;/script&gt;<br/>
+          <span class="tagstart v-no-attrs">script</span><br/>
+          <span class="text">export default ({ root, el, attr }) => {</span><br/>
+          <span class="text">el.querySelector('h1').style.color = attr.color;</span><br/>
+          <span class="tagend">script</span><br/>
           <br/>
-          &lt;style&gt;<br/>
-          &nbsp;&nbsp;:host {<br/>
-          &nbsp;&nbsp;&nbsp;&nbsp;display: block;<br/>
-          &nbsp;&nbsp;&nbsp;&nbsp;text-align: center;<br/>
-          &nbsp;&nbsp;&nbsp;&nbsp;font-family: 'Courier New', Courier, monospace;<br/>
-          &nbsp;&nbsp;&nbsp;&nbsp;font-size: 2em;<br/>
-          &nbsp;&nbsp;&nbsp;&nbsp;color: #333;<br/>
-          &nbsp;&nbsp;}<br/>
-          &lt;/style&gt;<br/>
-        </div>
-      </ns-demo>
-      <ns-details color="#442233">
+          <span class="tagstart v-no-attrs">style</span><br/>
+          <span class="text">:host {</span><br/>
+          <span class="text">  display: block;</span><br/>
+          <span class="text">  text-align: center;</span><br/>
+          <span class="text">  font-family: 'Courier New', Courier, monospace;</span><br/>
+          <span class="text">  font-size: 2em;</span><br/>
+          <span class="text">  color: #333;</span><br/>
+          <span class="text">}</span><br/>
+          <span class="tagend">style</span>
+        </code>
+      </ns-details>
+      <ns-details color="var(--paper-2)">
         <p>
           Want to feel the nolstagia of the 90s? Load in jQuery and use it in your Ease components.
           Need to fetch data from an API? Use the native Fetch API.
@@ -140,7 +147,7 @@
           Everything you need is here because everything you need is <em>already</em> in the browser.
         </p>
       </ns-details>
-      <ns-demo>
+      <ns-details>
         <h1 slot="header">
           Ease packages include...
         </h1>
@@ -150,7 +157,7 @@
           @easedotjs/reactive-dom - Make the content of your components reactive<br/>
           @easedotjs/router - Make your sites load additional pages without reloading<br/>
         </div>
-      </ns-demo>
+      </ns-details>
     </main>
     <ns-footer></ns-footer>
   </body>
