--- a/public/docs.html
+++ b/public/docs.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script type="module" src="@easedotjs/core/index.js"></script>
-    <script type="module" src="@easedotjs/components/index.js"></script>
-    <script type="module" src="@easedotjs/reactive-dom/index.js"></script>
-    <script type="module" src="@easedotjs/router/index.js"></script>
+    <script type="module" async>
+      import '/@easedotjs/core/index.js';
+      import '/@easedotjs/reactive-dom/index.js';
+      import '/@easedotjs/components/index.js';
+      import '/@easedotjs/router/index.js';
+    </script>
     <link rel="component-def" href="./component-def.xml" />
     <link rel="stylesheet" href="styles.css" />
     <title>Ease Documentation</title>
