--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script type="module" async>
-      import '/@easedotjs/core/index.js';
-      import '/@easedotjs/components/index.js';
-      import '/@easedotjs/reactive-dom/index.js';
-      import '/@easedotjs/router/index.js';
-    </script>
-    <link rel="component-def" href="component-def.xml" />
-    <link rel="stylesheet" href="styles.css" />
     <title>Ease - The Do-More-With-Less Framework</title>
-    <meta name="ease.core.debug" content="true">
+    <meta charset="UTF-8">
     <meta name="description" content="Ease is a web framework that lets you do more with less.">
     <meta name="keywords" content="web, framework, ease, do-more-with-less">
     <meta name="author" content="Ease">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="ease.core.debug" content="true">
+    <link rel="component-def" href="component-def.xml" />
+    <link rel="stylesheet" href="styles/styles.css" />
+    <script type="module" async>
+      import '/@easedotjs/core/index.js';
+      import '/@easedotjs/reactive-dom/index.js';
+      import '/@easedotjs/components/index.js';
+      import '/@easedotjs/router/index.js';
+    </script>
   </head>
   <body>
     <ns-header></ns-header>
     <div id="hero">
       <p>No build step or bundler needed.</p>
       <p>Pure HTML and JavaScript.</p>
-      <p><strong>Code. Upload. Done.</strong></p>
+      <p><strong>ns-code. Upload. Done.</strong></p>
       <p>That's <strong><em>Ease</em></strong>.</p>
       <ns-button to="docs.html">Get Started</ns-button>
       <ns-button to="docs.html">Documentation</ns-button>    
     </div>
     <main>
-      <ns-details color="var(--paper-1)">
+      <ns-colorbox color="var(--paper-2)">
         <p>
           Ease gives you the power of modern frameworks using the tools built right into the browser.
         </p>
@@ -35,10 +36,10 @@
           No need to set up a build enviroment, no need to learn a new language or syntax.
         </p>
         <p>
-          <strong>Just write your code and <u>ship it</u>.</strong>
+          <strong>Just write your ns-code and <u>ship it</u>.</strong>
         </p>
-      </ns-details>
-      <ns-details color="var(--paper-2)">
+      </ns-colorbox>
+      <ns-colorbox color="var(--paper-1)">
         <p>
           Since Ease is built on web standards, you can use it anywhere you 
           can use HTML, CSS, and JavaScript.    
@@ -49,15 +50,15 @@
         <p>
           With very little to learn, anyone familiar with HTML can get started with Ease.
         </p>
-      </ns-details>
-      <ns-details color="#f5f5f5">
+      </ns-colorbox>
+      <ns-colorbox color="var(--slate-2)">
         <h1>
           Load the Library
         </h1>
         <p>
           Start by adding the necessary script tags to your HTML file.
         </p>
-        <code>
+        <ns-code>
           <span class="tagstart">script</span>
           <span class="tagattr">type</span><span class="tagattrval">module</span> 
           <span class="tagattr">src</span><span class="tagattrval">https://unpkg.com/@easedotjs/core</span><span class="tagend v-no-content">script</span>
@@ -65,60 +66,60 @@
           <span class="tagstart">script</span>
           <span class="tagattr">type</span><span class="tagattrval">module</span> 
           <span class="tagattr">src</span><span class="tagattrval">https://unpkg.com/@easedotjs/components</span><span class="tagend v-no-content">script</span>
-        </code>
-      </ns-details>    
-      <ns-details>
+        </ns-code>
+      </ns-colorbox>    
+      <ns-colorbox color="var(--slate-1)">
         <h1>
           Load a Component
         </h1>
         <p>
           Once you've loaded the library, you can load a component from an HTML document.
         </p>
-        <code>
+        <ns-code>
           <span class="tagstart">link</span>
           <span class="tagattr">rel</span><span class="tagattrval">component</span>
           <span class="tagattr">name</span><span class="tagattrval">ns-hello</span>
           <span class="tagattr">href</span><span class="tagattrval">components/hello.html</span>
           <span class="tagend v-self-closing"></span>
-        </code>
-      </ns-details>
-      <ns-details bgcolor="#f5f5f5">
+        </ns-code>
+      </ns-colorbox>
+      <ns-colorbox color="var(--slate-2)">
         <h1>
           Use the Component
         </h1>
         <p>
           Once you've loaded the component, you can use it in your HTML.
         </p>
-        <code>
+        <ns-code>
           <span class="tagstart v-no-attrs">ns-hello</span></span>Hello World!<span class="tagend">ns-hello</span>
-        </code>
-      </ns-details>
-      <ns-details color="var(--paper-1)">
+        </ns-code>
+      </ns-colorbox>
+      <ns-colorbox color="var(--slate-3)">
         <p>
           Components can be complex, interactive isolated elements with their own styles, 
           scripts, and templates - or simple, static elements that just render content.
         </p>
-      </ns-details>
-      <ns-details  bgcolor="#f5f5f5">
+      </ns-colorbox>
+      <ns-colorbox  color="var(--slate-2)">
         <h1>
           Keep things simple and light...
         </h1>
-        <code>
+        <ns-code>
           <span class="tagstart v-no-attrs">template</span><br/>
           <span class="tagstart v-no-attrs">slot</span><span class="tagend">slot</span><br/>
           <span class="tagend">template</span>
-        </code>
-      </ns-details>
-      <ns-details>
+        </ns-code>
+      </ns-colorbox>
+      <ns-colorbox color="var(--slate-1)">
         <h1>
           ...or build something more complex
         </h1>
         <div slot="filename">
           hello.html
         </div>
-        <code>
+        <ns-code>
           <span class="tagstart v-no-attrs">template</span><br/>
-          <span class="text">Hello, </span><span class="tagstart v-no-attrs">slot</span><span class="tagend">slot</span><br/>
+          <span class="tagstart v-no-attrs">h1</span><span class="text">Hello, </span><span class="tagstart v-no-attrs">slot</span><span class="tagend">slot</span><span class="tagend">h1</span><br/>
           <span class="tagend">template</span><br/>
           <br/>
           <span class="tagstart v-no-attrs">script</span><br/>
@@ -135,9 +136,9 @@
           <span class="text">  color: #333;</span><br/>
           <span class="text">}</span><br/>
           <span class="tagend">style</span>
-        </code>
-      </ns-details>
-      <ns-details color="var(--paper-2)">
+        </ns-code>
+      </ns-colorbox>
+      <ns-colorbox color="var(--slate-2)">
         <p>
           Want to feel the nolstagia of the 90s? Load in jQuery and use it in your Ease components.
           Need to fetch data from an API? Use the native Fetch API.
@@ -146,18 +147,18 @@
         <p>
           Everything you need is here because everything you need is <em>already</em> in the browser.
         </p>
-      </ns-details>
-      <ns-details>
-        <h1 slot="header">
+      </ns-colorbox>
+      <ns-colorbox color="var(--slate-1)">
+        <h1>
           Ease packages include...
         </h1>
-        <div slot="code">
+        <ns-code>
           @easedotjs/core - The core library<br/>
           @easedotjs/components - Loads components from HTML documents<br/>
           @easedotjs/reactive-dom - Make the content of your components reactive<br/>
           @easedotjs/router - Make your sites load additional pages without reloading<br/>
-        </div>
-      </ns-details>
+        </ns-code>
+      </ns-colorbox>
     </main>
     <ns-footer></ns-footer>
   </body>
