--- a/public/docs.html
+++ b/public/docs.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Ease Documentation</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Ease is a web framework that lets you do more with less.">
+    <meta name="keywords" content="web, framework, ease, do-more-with-less">
+    <meta name="author" content="Ease">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="ease.core.debug" content="true">
+    <link rel="component-def" href="component-def.xml" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <script type="module" async>
       import '/@easedotjs/core/index.js';
       import '/@easedotjs/reactive-dom/index.js';
       import '/@easedotjs/components/index.js';
       import '/@easedotjs/router/index.js';
-    </script>
-    <link rel="component-def" href="./component-def.xml" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Ease Documentation</title>
-    <meta name="ease.core.debug" content="true">
-    <meta name="description" content="Ease is a web framework that lets you do more with less.">
-    <meta name="keywords" content="web, framework, ease, do-more-with-less">
-    <meta name="author" content="Ease">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+    </script>  </head>
   <body>
     <ns-header></ns-header>
     <main>
