--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <div id="hero">
       <p>No build step or bundler needed.</p>
       <p>Pure HTML and JavaScript.</p>
-      <p><strong>ns-code. Upload. Done.</strong></p>
+      <p><strong>Code. Upload. Done.</strong></p>
       <p>That's <strong><em>Ease</em></strong>.</p>
       <ns-button to="docs.html">Get Started</ns-button>
       <ns-button to="docs.html">Documentation</ns-button>    
@@ -36,7 +36,7 @@
           No need to set up a build enviroment, no need to learn a new language or syntax.
         </p>
         <p>
-          <strong>Just write your ns-code and <u>ship it</u>.</strong>
+          <strong>Just write your code and <u>ship it</u>.</strong>
         </p>
       </ns-colorbox>
       <ns-colorbox color="var(--paper-1)">
